--- a/openCV add(),addWeighted(),ROI,resize,merge,split .ipynb
+++ b/openCV add(),addWeighted(),ROI,resize,merge,split .ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "de343f69",
+   "metadata": {},
+   "source": [
+    "# video writing using OpenCV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "1ea4cf39",
    "metadata": {},
    "outputs": [],
@@ -13,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "bc013738",
    "metadata": {
     "scrolled": true
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "524c741e",
    "metadata": {},
    "outputs": [],
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "efe64e6c",
    "metadata": {},
    "outputs": [],
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "2ef60f43",
    "metadata": {},
    "outputs": [],
@@ -126,34 +134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "64217fdf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "newImg = cv2.addWeighted(img,.8,img2,.2,0)\n",
+    "#args                 (img1,weight1,img2,weight2,gamavalue)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "006fa5bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1a4e332",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "e1cb6056",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring XDG_SESSION_TYPE=wayland on Gnome. Use QT_QPA_PLATFORM=wayland to run on Wayland anyway.\n"
+     ]
+    }
+   ],
    "source": [
     "cv2.imshow('image',newImg)\n",
     "cv2.waitKey(0)\n",
